Atualizando PWA com caminhos corrigidos

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Pesquisa F.O",
   "short_name": "PesquisaFO",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#1A1A1A",
   "theme_color": "#1A1A1A",
